--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -17,7 +17,7 @@
             </button>
           </div>
           <div id="menu"
-            class="hidden bg-[white] absolute top-0 right-0 z-[1] w-[20rem] mr-[20px] rounded-tl-[15px] rounded-br-[15px]">
+            class="hidden px-3 py-2 bg-white absolute top-0 right-0 z-1 w-[20rem] mr-5 rounded-tl-[15px] rounded-br-[15px]">
             <ul class="navbar-nav flex flex-col">
               <li class="nav-item p-2">
                 <a class="cursor-pointer nav-link text-black font-[700]
