--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,11 +1,9 @@
-
 // hamburger-menu
 
 @media (min-width: 350px) {
   .pt-scroll {
     padding-top: 51px;
   }
-
 
   /* HAMBURGER MENU */
 
@@ -16,7 +14,7 @@
 
   .hamburger__top-bun,
   .hamburger__bottom-bun {
-    content: '';
+    content: "";
     position: absolute;
     width: 24px;
     height: 2px;
@@ -27,31 +25,31 @@
 
   @media screen and (max-width: 1536px) {
     .hamburger__top-bun,
-    .hamburger__bottom-bun{
+    .hamburger__bottom-bun {
       width: 24px;
     }
   }
   @media screen and (max-width: 1280px) {
     .hamburger__top-bun,
-    .hamburger__bottom-bun{
+    .hamburger__bottom-bun {
       width: 21px;
     }
   }
   @media screen and (max-width: 1024px) {
     .hamburger__top-bun,
-    .hamburger__bottom-bun{
+    .hamburger__bottom-bun {
       width: 18px;
     }
   }
   @media screen and (max-width: 768px) {
     .hamburger__top-bun,
-    .hamburger__bottom-bun{
+    .hamburger__bottom-bun {
       width: 15px;
     }
   }
   @media screen and (max-width: 640px) {
     .hamburger__top-bun,
-    .hamburger__bottom-bun{
+    .hamburger__bottom-bun {
       width: 12px;
     }
   }
@@ -74,40 +72,33 @@
   }
 
   .open .hamburger__top-bun {
-    transform:
-      rotate(45deg) translateY(0px);
+    transform: rotate(45deg) translateY(0px);
   }
 
   .open .hamburger__bottom-bun {
-    transform:
-      rotate(-45deg) translateY(0px);
+    transform: rotate(-45deg) translateY(0px);
   }
-
-
 }
 
-
-#menu{
-  animation-name: rotateX ;
+#menu {
+  animation-name: rotateX;
   animation-duration: 1s;
-  box-shadow:0px 2px 16px -5px rgb(63 62 73 / 58%);
+  box-shadow: 0px 2px 16px -5px rgb(63 62 73 / 58%);
 }
 @keyframes rotateX {
-  from{
+  from {
     height: 0;
     width: 0;
     opacity: 0;
-    
   }
-  to{
+  to {
     width: 20rem;
-    height: 15rem;
+    height: 16rem;
     opacity: 1;
   }
-
 }
 
-.self-start{
+.self-start {
   box-shadow: 0px 2px 16px -5px rgb(63 62 73 / 58%);
 }
 
