--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="grid grid-cols-2">
     <div class="ml-8">
       <a routerLink="/hridoyahmed" class="logo text-[#cb2525] 2xl:text-[40px] xl:text-[36px] 
-      lg:text-[34px] md:text-[34px] sm:text-[25px] font-[700]">Hridoy <span class="text-[#d4af37]">Ahmed</span></a>
+      lg:text-[34px] md:text-[34px] sm:text-[25px] font-[700]">Hridoy <span class="text-[#8b97c3]">Ahmed</span></a>
     </div>
     <div class="hamburger-menu flex justify-end">
       <header id="top" class="flex-col sm:relative">
@@ -38,6 +38,7 @@
                 <a class="nav-link text-black font-[700] text-[20px] pl-[5px]"
                   href="hridoyahmed.dev">Hridoyahmed.dev</a>
               </li>
+
             </ul>
           </div>
         </nav>
