--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header grid grid-rows-1 py-5 fixed z-10 top-0 w-full">
   <div class="grid grid-cols-2">
     <div class="ml-8">
-      <a routerLink="/hridoyahmed" class="logo text-[#cb2525] 2xl:text-[40px] xl:text-[36px] 
+      <a routerLink="/hridoyahmed" class="logo text-[#16e4b7] 2xl:text-[40px] xl:text-[36px] 
       lg:text-[34px] md:text-[34px] sm:text-[25px] font-[700]">Hridoy <span class="text-[#8b97c3]">Ahmed</span></a>
     </div>
     <div class="hamburger-menu flex justify-end">
