--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -100,9 +100,7 @@
       </div>
     </div>
   </ng-template>
-
-
-  <ng-template swiperSlide class="tast">
+  <ng-template swiperSlide class="tast last-slider">
     <div class="work-section bg-[#F9F9F9] w-[100%] h-[100%] flex justify-center items-center">
       <div class="px-[25px] py-[25px] md:px-[300px] md:py-[100px] bg-[#fff]">
         <div class="work-content text-center">
